# ls-samples-tester

./: .env.example  .gitignore  README.md  pyproject.toml
.github/workflows/: weekly-scan.yml
data/: durations.json  etag_cache.json  registry.json  trends.json
data/results/: 2026-03-18.json  2026-03-21.json  2026-03-22.json  2026-03-23.json  2026-03-27.json
docs/plans/: 2026-03-16-production-repo-setup.md  2026-03-22-meaningful-scan-results.md  2026-03-22-run-sample-apps.md  2026-03-23-scanner-improvements.md
src/scanner/: __init__.py  classifier.py  cli.py  config.py  duration_tracker.py  models.py  priority.py  script_detector.py  service_extractor.py  verifier.py
src/scanner/deployer/: __init__.py  azure.py  base.py  cdk.py  cloudformation.py  pulumi.py  sam.py  serverless.py  terraform.py
src/scanner/discovery/: __init__.py  etag_cache.py  github_client.py  iac_detector.py  registry.py
src/scanner/report/: generator.py  trends.py
src/scanner/report/templates/: index.html  report.html  sample_detail.html
src/scanner/runner/: __init__.py  localstack.py  orchestrator.py  sandbox.py
tests/: test_classifier.py  test_cli.py  test_config.py  test_deployer_base.py  test_deployer_cdk.py  test_deployer_cfn.py  test_deployer_remaining.py  test_deployer_sam.py  test_deployer_tf.py  test_discovery.py  test_duration_tracker.py  test_localstack_manager.py  test_models.py  test_orchestrator.py  test_priority.py  test_report.py  test_script_detector.py  test_search_discovery.py  test_service_extractor.py  test_trends.py  test_verifier.py
